--- a/Discord/package.json
+++ b/Discord/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "displayName": "Lumpn Discord Webhooks",
   "description": "Send messages to your Discord channel via webhooks.",
-  "unity": "2017.1",
   "dependencies": {
     "com.unity.ext.nunit": "1.0.0",
-    "com.unity.modules.unitywebrequestwww": "1.0.0"
+    "com.unity.modules.jsonserialize": "1.0.0",
+    "com.unity.modules.unitywebrequest": "1.0.0"
   },
   "keywords": [
     "lumpn",
