Improved usage samples

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "path": "Samples~/UsageSamples"
     },
     {
-      "displayName": "Testing Samples",
+      "displayName": "Discord API Debugging Samples",
       "path": "Samples~/TestingSamples"
     }
   ]
