Support embedded thumbnail images.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "path": "Samples~/FeedbackSamples"
     },
     {
-      "displayName": "Webhook Samples",
+      "displayName": "Webhook Usage Samples",
       "path": "Samples~/UsageSamples"
     },
     {
